--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,20 @@
 [workspace]
-members = ["basti-cli", "basti-daemon", "basti-task"]
+members = ["basti-cli", "basti-common", "basti-daemon"]
 resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
+
+[workspace.dependencies]
+axum = "0.7.4"
+clap = "4.5.1"
+etcd-client = "0.12.4"
+reqwest = "0.11.24"
+serde = "1.0.197"
+serde_json = "1.0.114"
+tokio = "1.36.0"
+uuid = "1.7.0"
 
 [profile.release]
 opt-level = 3
