--- a/basti-cli/Cargo.toml
+++ b/basti-cli/Cargo.toml
@@ -8,6 +8,8 @@ name = "bastictl"
 path = "src/main.rs"
 
 [dependencies]
-clap = "4.5.1"
-reqwest = { version = "0.11.24", default-features = false }
-serde_json = "1.0.114"
+basti-common = { path = "../basti-common" }
+clap = { workspace = true }
+reqwest = { workspace = true, default-features = false }
+serde_json = { workspace = true }
+tokio = { workspace = true, features = ["macros"] }
