--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -8,8 +8,9 @@ name = "bastid"
 path = "src/main.rs"
 
 [dependencies]
-clap = "4.5.1"
-etcd = { version = "0.9.0", default-features = false }
-hyper = { version = "1.2.0", features = ["http2", "server"] }
-serde_json = "1.0.114"
-tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
+axum = { workspace = true, features = ["http2"] }
+basti-common = { path = "../basti-common" }
+clap = { workspace = true }
+etcd-client = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
