--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2021"
 
 [workspace.dependencies]
 axum = "0.7.4"
-clap = "4.5.1"
+clap = { version = "4.5.1", features = ["derive"] }
 etcd-client = "0.12.4"
-reqwest = "0.11.24"
-serde = "1.0.197"
+reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-tokio = "1.36.0"
-uuid = "1.7.0"
+tokio = { version = "1.36.0", features = ["macros"] }
+url = "2.5.0"
+uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
 [profile.release]
 opt-level = 3
