--- a/basti-cli/Cargo.toml
+++ b/basti-cli/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 basti-common = { path = "../basti-common" }
-clap = { workspace = true }
-reqwest = { workspace = true, default-features = false }
-serde_json = { workspace = true }
-tokio = { workspace = true, features = ["macros"] }
+clap.workspace = true
+reqwest.workspace = true
+tokio.workspace = true
+url.workspace = true
