--- a/basti-common/Cargo.toml
+++ b/basti-common/Cargo.toml
@@ -4,6 +4,6 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-uuid = { workspace = true, features = ["serde", "v4", "fast-rng"] }
+serde.workspace = true
+serde_json.workspace = true
+uuid.workspace = true
