--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -8,9 +8,11 @@ name = "bastid"
 path = "src/main.rs"
 
 [dependencies]
-axum = { workspace = true, features = ["http2"] }
+axum.workspace = true
 basti-common = { path = "../basti-common" }
-clap = { workspace = true }
-etcd-client = { workspace = true }
-serde_json = { workspace = true }
-tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
+clap.workspace = true
+etcd-client.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tokio = { workspace = true, features = ["rt-multi-thread"] }
+url.workspace = true
