--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["macros"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 url = "2.5.0"
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
