--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -15,4 +15,6 @@ etcd-client.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
+tracing.workspace = true
+tracing-subscriber.workspace = true
 url.workspace = true
