--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 axum = "0.7.4"
 clap = { version = "4.5.1", features = ["derive"] }
 etcd-client = "0.12.4"
-reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
+reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["macros"] }
