--- a/basti-common/Cargo.toml
+++ b/basti-common/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+clap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 uuid.workspace = true
