--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 [workspace.dependencies]
 axum = "0.7.4"
 clap = { version = "4.5.1", features = ["derive"] }
+colored = "2.1.0"
 etcd-client = "0.12.4"
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tabled = "0.15.0"
 tokio = { version = "1.36.0", features = ["macros"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
