--- a/basti-cli/Cargo.toml
+++ b/basti-cli/Cargo.toml
@@ -10,6 +10,8 @@ path = "src/main.rs"
 [dependencies]
 basti-common = { path = "../basti-common" }
 clap = { workspace = true, features = ["env"] }
+colored.workspace = true
 reqwest.workspace = true
+tabled.workspace = true
 tokio.workspace = true
 url.workspace = true
