--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+anyhow = "1.0.80"
+async-channel = "2.2.0"
 axum = "0.7.4"
+chrono = "0.4.34"
 clap = { version = "4.5.1", features = ["derive"] }
 colored = "2.1.0"
 etcd-client = "0.12.4"
@@ -16,6 +19,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tabled = "0.15.0"
 tokio = { version = "1.36.0", features = ["macros"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = "2.5.0"
