--- a/basti-common/Cargo.toml
+++ b/basti-common/Cargo.toml
@@ -4,6 +4,8 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 clap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
