--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -8,13 +8,17 @@ name = "bastid"
 path = "src/main.rs"
 
 [dependencies]
+anyhow.workspace = true
+async-channel.workspace = true
 axum.workspace = true
 basti-common = { path = "../basti-common" }
+chrono.workspace = true
 clap.workspace = true
 etcd-client.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
-tracing.workspace = true
+tower-http.workspace = true
 tracing-subscriber.workspace = true
+tracing.workspace = true
 url.workspace = true
