--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -22,3 +22,4 @@ tower-http.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 url.workspace = true
+uuid.workspace = true
