--- a/basti-client/Cargo.toml
+++ b/basti-client/Cargo.toml
@@ -12,6 +12,7 @@ anyhow.workspace = true
 basti-common = { path = "../basti-common" }
 clap = { workspace = true, features = ["env"] }
 colored.workspace = true
+futures.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 tabled.workspace = true
