--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["basti-client", "basti-common", "basti-daemon"]
+members = ["basti-client", "basti-daemon", "basti-task"]
 resolver = "2"
 
 [workspace.package]
@@ -10,7 +10,7 @@ edition = "2021"
 anyhow = "1.0.80"
 async-channel = "2.2.0"
 axum = "0.7.4"
-chrono = "0.4.34"
+chrono = { version = "0.4.34", features = ["serde"] }
 clap = { version = "4.5.1", features = ["derive"] }
 colored = "2.1.0"
 etcd-client = "0.12.4"
@@ -18,6 +18,8 @@ futures = "0.3.30"
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+strum = "0.26.1"
+strum_macros = "0.26.1"
 tabled = "0.15.0"
 tokio = { version = "1.36.0", features = ["macros"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
