--- a/basti-task/Cargo.toml
+++ b/basti-task/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "basti-common"
+name = "basti-task"
 version.workspace = true
 edition.workspace = true
 
 [dependencies]
 anyhow.workspace = true
-chrono = { workspace = true, features = ["serde"] }
-clap.workspace = true
+chrono.workspace = true
 serde.workspace = true
-serde_json.workspace = true
+strum.workspace = true
+strum_macros.workspace = true
 uuid.workspace = true
