--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -15,6 +15,7 @@ basti-task = { path = "../basti-task" }
 chrono.workspace = true
 clap.workspace = true
 etcd-client.workspace = true
+futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 strum.workspace = true
