--- a/basti-client/Cargo.toml
+++ b/basti-client/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow.workspace = true
 basti-task = { path = "../basti-task" }
+chrono.workspace = true
 clap = { workspace = true, features = ["env"] }
 colored.workspace = true
 futures.workspace = true
