--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -25,3 +25,6 @@ tracing-subscriber.workspace = true
 tracing.workspace = true
 url.workspace = true
 uuid.workspace = true
+
+[profile.release]
+opt-level = 3
