--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = "2.5.0"
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
+
+[profile.release]
+opt-level = 3
