--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.80"
 async-channel = "2.2.0"
 axum = "0.7.4"
+bson = "2.9.0"
 chrono = { version = "0.4.34", features = ["serde"] }
 clap = { version = "4.5.1", features = ["derive"] }
 colored = "2.1.0"
