--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -12,6 +12,7 @@ anyhow.workspace = true
 async-channel.workspace = true
 axum.workspace = true
 basti-task = { path = "../basti-task" }
+bson.workspace = true
 chrono.workspace = true
 clap.workspace = true
 etcd-client.workspace = true
