re-organize root-level and crate-level cargo.toml files

--- a/basti-task/Cargo.toml
+++ b/basti-task/Cargo.toml
@@ -7,6 +7,6 @@ edition.workspace = true
 anyhow.workspace = true
 chrono.workspace = true
 serde.workspace = true
-strum.workspace = true
-strum_macros.workspace = true
+strum = "0.26.1"
+strum_macros = "0.26.1"
 uuid.workspace = true
