--- a/basti-client/Cargo.toml
+++ b/basti-client/Cargo.toml
@@ -12,11 +12,11 @@ anyhow.workspace = true
 basti-task = { path = "../basti-task" }
 chrono.workspace = true
 clap = { workspace = true, features = ["env"] }
-colored.workspace = true
+colored = "2.1.0"
 futures.workspace = true
-reqwest.workspace = true
+reqwest = { version = "0.11.24", features = ["json"] }
 serde.workspace = true
-tabled.workspace = true
+tabled = "0.15.0"
 tokio.workspace = true
 url.workspace = true
 uuid.workspace = true
