--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,10 +1,6 @@
 on:
   workflow_dispatch:
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,7 +23,7 @@ jobs:
     - name: Log into registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -35,4 +31,4 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        tags: ghcr.io/satoqz/bastid:latest
