--- a/basti-client/Cargo.toml
+++ b/basti-client/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/main.rs"
 anyhow.workspace = true
 basti-task = { path = "../basti-task" }
 chrono.workspace = true
-clap = { workspace = true, features = ["env"] }
+clap.workspace = true
 colored = "2.1.0"
 futures.workspace = true
 reqwest = { version = "0.11.24", features = ["json"] }
