--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -32,3 +32,6 @@ jobs:
       with:
         push: true
         tags: ghcr.io/satoqz/bastid:latest
+        platforms: linux/amd64,linux/arm64/v8
+        cache-from: type=registry,ref=user/app:latest
+        cache-to: type=inline
