add my own etcd image back, quay.io/coreos/etcd sucks

--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -23,11 +23,17 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push
+    
+    - name: Build and push etcd image
       uses: docker/build-push-action@v5
       with:
         push: true
+        dockerfile: docker/etcd.Dockerfile
+        tags: ghcr.io/satoqz/etcd:latest
+
+    - name: Build and push bastid image
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        dockerfile: docker/bastid.Dockerfile
         tags: ghcr.io/satoqz/bastid:latest
-        cache-from: type=registry,ref=user/app:latest
-        cache-to: type=inline
