--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -18,7 +18,7 @@ clap.workspace = true
 etcd-client = "0.12.4"
 futures.workspace = true
 serde.workspace = true
-tokio = { workspace = true, features = ["rt-multi-thread"] }
+tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
