move compose files into `examples` directory

--- a/examples/pi-cluster/compose.pi-1.yml
+++ b/examples/pi-cluster/compose.pi-1.yml
@@ -1,37 +1,43 @@
-#!/usr/bin/env -S docker -H ssh://pi@192.168.0.22 compose -p basti -f
+#!/usr/bin/env -S docker -H ssh://pi@192.168.0.20 compose -p basti -f
 
 volumes:
   etcd:
+    name: basti-etcd
+
+networks:
+  default:
+    name: basti
 
 services:
   etcd:
     image: ghcr.io/satoqz/etcd:latest
+    container_name: basti-etcd
     restart: unless-stopped
     ports:
       - 2379:2379
       - 2380:2380
     volumes:
-      - etcd:/volume
+      - etcd:/data
     command:
-      - --name=pi-3
-      - --data-dir=/volume/data
-      - --wal-dir=/volume/wal
+      - --name=pi-1
+      - --data-dir=/data
       - --listen-client-urls=http://0.0.0.0:2379
       - --listen-peer-urls=http://0.0.0.0:2380
-      - --advertise-client-urls=http://192.168.0.22:2379
-      - --initial-advertise-peer-urls=http://192.168.0.22:2380
+      - --advertise-client-urls=http://192.168.0.20:2379
+      - --initial-advertise-peer-urls=http://192.168.0.20:2380
       - --initial-cluster=pi-1=http://192.168.0.20:2380,pi-2=http://198.168.0.21:2380,pi-3=http://192.168.0.22:2380
       - --initial-cluster-token=basti-etcd-cluster
       - --initial-cluster-state=new
 
   bastid:
     image: ghcr.io/satoqz/bastid:latest
+    container_name: basti-bastid
     restart: unless-stopped
     ports:
       - 1337:1337
     depends_on:
       - etcd
     command:
-      - --name=pi-3
+      - --name=pi-2
       - --workers=1
-      - --etcd=http://192.168.0.22:2379
+      - --etcd=http://192.168.0.20:2379
