--- a/basti-client/Cargo.toml
+++ b/basti-client/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow.workspace = true
-basti-task = { path = "../basti-task" }
+basti-types = { path = "../basti-types" }
 chrono.workspace = true
 clap.workspace = true
 colored = "2.1.0"
