--- a/basti-daemon/Cargo.toml
+++ b/basti-daemon/Cargo.toml
@@ -20,6 +20,6 @@ futures.workspace = true
 serde.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["json"] }
 url.workspace = true
 uuid.workspace = true
